# acorn

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  LICENSE  PROGRESS_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: deploy_hf.yml  docs.yml  publish.yml
acorn/: __init__.py  _version.py  decorators.py  discovery.py  exceptions.py  module.py  partial.py  service.py  template.py  tool_schema.py  types.py
acorn/llm/: __init__.py  litellm_client.py
acorn/serialization/: __init__.py  (+2 more)
docs/: _config.yml  branching.md  getting-started.md  index.md  module.md  sandbox-docker.md  sandbox-local.md  sandbox-process.md  services.md  tool-discovery.md  workflows.md
examples/: README.md  README_CODE_COPILOT.md  app.py  bus_factor.py  caching_example.py  code_copilot_interactive.py  code_copilot_with_branch.py  dependency_scanner.py  doc_coverage.py  hf_README.md  hn_production_check.py  hn_themes.py  license_checker.py  metadata_example.py  requirements.txt  research_assistant.py  simple_qa.py  single_turn_summarizer.py
specs/: agentic-loop.md  api-reference.md  branching.md  core-concepts.md  data-serialization.md  intro.md
tests/: __init__.py  conftest.py  test_agentic_loop.py  test_async.py  test_branching.py  test_cache_config.py  test_cache_integration.py  test_discovery.py  test_docker_sandbox.py  test_exceptions.py  test_history.py  test_litellm_client.py  test_memory_service.py  test_metadata.py  test_model_config.py  test_module_init.py  test_module_single_turn.py  test_optional_final_output.py  test_parse_retry.py  test_partial.py  test_sandbox_service.py  test_service.py  test_streaming_partial.py  test_template.py  test_tool_decorator.py  test_tool_schema.py  test_types.py
(+24 files in other folders)
