[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acorn"
version = "0.6.2"
description = "LLM agent framework with structured I/O"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andrei Onel"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
vertex = [
    "google-cloud-aiplatform>=1.0",
]

[project.urls]
Homepage = "https://github.com/askmanu/acorn"
Documentation = "https://github.com/askmanu/acorn"
Repository = "https://github.com/askmanu/acorn"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.hatch.build.targets.wheel]
exclude = [
    "docs/",
    "examples/",
    "specs/",
    "tests/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    "examples/",
    "specs/",
    "tests/",
    ".github/",
    ".pytest_cache/",
    "__pycache__/",
    "*.pyc",
    ".coverage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=acorn --cov-report=term-missing"
